--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,8 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+header{
+    background-image: url(/images/bgtile.png);
+  background-color:#1c5380;
+}
+
