--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,75 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+html {
   margin: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#background-gradient {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 40vh;
+  background-image: url("../images/bgtile.png");
+  background-position: left;
+  background-repeat: repeat repeat;
+}
+
+main {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8%;
+}
+
+
+
+
+
+#logo-plus-content {
+  width: 50%;
+}
+
+#explanation-text {
+  width: auto;
+  background-image: url("../images/frame.png");
+  background-position: center;
+  background-size: cover;
+}
+
+
+/* FOOTER */
+
+#footer-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+#footer-links > li {
+  margin: 0px 7.5px;
+}
+
+#footer-links > li > a{
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: 700;
+  font-size: 0.75rem;
+}
+
+#copyright {
+  font-weight: 300;
+  font-size: 0.75rem;
+}
+
