--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,19 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 100px;
+}
+
+#body-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 2;
+}
+
+main {
+  width: 60%;
 }
