--- a/styles/style.css
+++ b/styles/style.css
@@ -20,33 +20,30 @@ body {
 .white-background {
   position: relative;
   left: 140px;
-  bottom: 130px;
+  bottom: 300px;
 
 }
 
 .phones {
-  width: 240px;
+  width: 320px;
   position: relative;
-  right: 250px;
-  top: 170px;
+  right: 320px;
+  top: 145px;
 }
 
 .instagram-logo {
   width: 20%;
   position: relative;
-  bottom: 500px;
-}
-
-.login-button {
-  width: 10%;
-  align-items:;
+  bottom: 650px;
+  left:20px;
 }
 
 .text {
   position: relative;
+  line-height: 2;
   width: 360px;
   left: 100px;
-  bottom: 480px;
+  bottom: 640px;
   color: #a2a2a2;
   font-size:small
 }
@@ -57,10 +54,11 @@ body {
 }
 
 .login-button {
+  width: 10%;
   padding: 6px;
   text-align: center;
   position: relative;
-  bottom: 540px;
+  bottom: 690px;
   left: 320px;
   background-color: #668bab;
   border: 1px solid #06365f;
@@ -69,16 +67,13 @@ body {
   background: -moz-linear-gradient(top, #06365F 0%, #668BAB 53%, #06365F 100%);
   background: -webkit-linear-gradient(top, #06365F 0%, #668BAB 53%, #06365F 100%);
   background: linear-gradient(to bottom, #06365F 0%, #668BAB 53%, #06365F 100%);
-  font-size: 15px;
-  background-image: url(/images/home.png) no repeat;
-  
+  font-size: 15px; 
 }
 
 .buttons {
   position: relative;
-  
   left: 550px;
-  bottom:490px;
+  bottom:590px;
   width: 80px;
 }
 .android-button {
@@ -94,7 +89,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   position: relative;
-  bottom: 500px;
+  bottom: 600px;
   left: 190px;
   text-transform: uppercase;
   font-size: 10px;
@@ -105,5 +100,5 @@ body {
   color: #8b949e;
   position: relative;
   left: 850px;
-  bottom: 528px;
+  bottom: 626px;
 }
