--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,145 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
+
+background repeat x repeat y no repeat
+
 */
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  box-sizing: border-box;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 731px;
+  width: 1090px;
 }
+
+.gradientDiv {
+  background: linear-gradient(to bottom  #06365f 0%, #1c5380 40%, #FFF 40% #FFF 100%);
+  display: flex;
+  height: 651px ;
+  width: 100%;
+}
+
+#phone {
+  height: 515px;
+}
+
+#home {
+  height: 25px;
+}
+
+.leftVerticalSection {
+  
+  flex: 40%;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 60px;
+  margin-top: 8%;
+  margin-left: 30px;
+  height: 651px;
+}
+
+.rightVerticalSection {
+  flex: 60%;
+  margin-top: 10%;
+  height: 651px;
+}
+
+.logIn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #FFF;
+  font-weight: bold;
+}
+
+#instagramLogo {
+  height: 70px;
+  padding-left: 2px;
+}
+
+article h3 {
+  color: #06365f ;
+  font-size: 30px;
+  margin-right: 100px;
+  text-align: left;
+  width: 320px;
+  height: 40px;
+  line-height: 30px;
+}
+
+#mainParagraph {
+  font-size: 17px;
+  margin-top: 0px;
+  padding-right: 25%;
+}
+
+br {
+  display: block;
+  margin: 11px 0;
+  content: "";
+}
+
+#mainArticle {
+  height: 402px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 6%;
+}
+
+.divLogin {
+  display: flex;
+  justify-content: space-around;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-y;
+  width: 100px;
+  font-size: 16px;
+  align-items: center;
+  margin-right: 16.5%;
+  /*background: linear-gradient(#1c5380 0%, #FFF 90%);
+  //no tengo manera de poner el gradiente, he probado a hacer lo mismo que con la imagen pero no hay manera y he preferidon dejarlo sin nada */
+}
+
+.textDiv{
+  background-image: url(../images/frame.png);
+  background-size: 85%;
+  background-repeat: no-repeat;
+  margin-top: 20px;
+}
+
+.mainFooter {
+height: 40px ;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+margin-left: 22%;
+margin-right: 22%;
+padding-top: 0px;
+}
+
+.mainFooter a {
+  text-decoration: none;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: 13px;
+
+}
+
+#downloadAndroid {
+  margin-left: 10px;
+}
+
+#copyRightIg {
+  color: rgb(177, 175, 175);
+}
+
+
+
+
+
+
