--- a/styles/style.css
+++ b/styles/style.css
@@ -9,8 +9,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  width: 100%;
   padding: 100px;
+  background: #FFF url(../images/bgtile.png) repeat-x;
 }
 
 #body-container {
@@ -18,8 +18,90 @@ body {
   justify-content: center;
   align-items: center;
   flex-grow: 2;
+  
 }
 
 main {
-  width: 60%;
+  height: 500px;
+  width: 450px;
+  margin: 0 50px;
+  padding: 0 50px;
+}
+main #head-logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+#head-logo img {
+  width: 65%;
+}
+#head-logo > button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 30px;
+  background-color: #457ba7;
+  padding: 18px 5px;
+  box-shadow: 2px 2px 5px #1c5380;
+  border: 1px solid #1c5380;
+}
+#head-logo > button > img {
+  width: 25px;
+}
+#head-logo > button > span {
+  font-size: 12px;
+  margin-top: 5px;
+  color: #FFF;
+  font-weight: 400;
+  margin-left: 10px;
+  margin-right: 5px;
+}
+
+main article {
+  padding: 1px 25px 0px 25px;
+  background-color: #FFF;
+  border-radius: 5px;
+  
+}
+
+main article > h1 {
+  width: 64%;
+  color: #06365f;
+}
+main #download-container {
+  display: flex;
+  align-items: flex-end;
+  padding-left: 25px;
+  margin-top: 40px;
+}
+#download-container #apple {
+  margin-right: 20px;
+}
+footer {
+  
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  
+}
+footer ul {
+  display: flex;
+  justify-content: flex-start;
+  list-style: none;
+  padding-left: 0;
+  
+}
+footer ul li > span {
+  font-weight: 800;
+  color: #AAA;
+  font-size: 14px;
+  
+}
+footer ul li > a {
+  font-size: 14px;
+  color: #1c5380;
+  font-weight: 800;
+  text-decoration: none;
+  margin-right: 15px;
 }
